# auto-abi

./: README.md  pyproject.toml
auto_abi/: abi_generator.py
